qt/quick/gen_qqmlcontext.h

class QMetaObject;
class QObject;
class QQmlContext;
typedef QQmlContext::PropertyPair QQmlContext__PropertyPair;
class QQmlContext__PropertyPair;
class QQmlEngine;
class QUrl;
class QVariant;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QQmlContext QQmlContext;
typedef struct QQmlContext__PropertyPair QQmlContext__PropertyPair;
typedef struct QQmlEngine QQmlEngine;
typedef struct QTimerEvent QTimerEvent;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
QQmlContext* QQmlContext_new(QQmlEngine* parent);
QQmlContext* QQmlContext_new2(QQmlContext* parent);
QQmlContext* QQmlContext_new3(QQmlEngine* parent, QObject* objParent);
QQmlContext* QQmlContext_new4(QQmlContext* parent, QObject* objParent);
QMetaObject* QQmlContext_metaObject(const QQmlContext* self);
void* QQmlContext_metacast(QQmlContext* self, const char* param1);
int QQmlContext_metacall(QQmlContext* self, int param1, int param2, void** param3);
struct miqt_string QQmlContext_tr(const char* s);
struct miqt_string QQmlContext_trUtf8(const char* s);
bool QQmlContext_isValid(const QQmlContext* self);
QQmlEngine* QQmlContext_engine(const QQmlContext* self);
QQmlContext* QQmlContext_parentContext(const QQmlContext* self);
QObject* QQmlContext_contextObject(const QQmlContext* self);
void QQmlContext_setContextObject(QQmlContext* self, QObject* contextObject);
QVariant* QQmlContext_contextProperty(const QQmlContext* self, struct miqt_string param1);
void QQmlContext_setContextProperty(QQmlContext* self, struct miqt_string param1, QObject* param2);
void QQmlContext_setContextProperty2(QQmlContext* self, struct miqt_string param1, QVariant* param2);
void QQmlContext_setContextProperties(QQmlContext* self, struct miqt_array /* of QQmlContext__PropertyPair* */  properties);
struct miqt_string QQmlContext_nameForObject(const QQmlContext* self, QObject* param1);
QUrl* QQmlContext_resolvedUrl(QQmlContext* self, QUrl* param1);
void QQmlContext_setBaseUrl(QQmlContext* self, QUrl* baseUrl);
QUrl* QQmlContext_baseUrl(const QQmlContext* self);
struct miqt_string QQmlContext_tr2(const char* s, const char* c);
struct miqt_string QQmlContext_tr3(const char* s, const char* c, int n);
struct miqt_string QQmlContext_trUtf82(const char* s, const char* c);
struct miqt_string QQmlContext_trUtf83(const char* s, const char* c, int n);
bool QQmlContext_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QQmlContext_virtualbase_metaObject(const void* self);
bool QQmlContext_override_virtual_metacast(void* self, intptr_t slot);
void* QQmlContext_virtualbase_metacast(void* self, const char* param1);
bool QQmlContext_override_virtual_metacall(void* self, intptr_t slot);
int QQmlContext_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QQmlContext_override_virtual_event(void* self, intptr_t slot);
bool QQmlContext_virtualbase_event(void* self, QEvent* event);
bool QQmlContext_override_virtual_eventFilter(void* self, intptr_t slot);
bool QQmlContext_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QQmlContext_override_virtual_timerEvent(void* self, intptr_t slot);
void QQmlContext_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QQmlContext_override_virtual_childEvent(void* self, intptr_t slot);
void QQmlContext_virtualbase_childEvent(void* self, QChildEvent* event);
bool QQmlContext_override_virtual_customEvent(void* self, intptr_t slot);
void QQmlContext_virtualbase_customEvent(void* self, QEvent* event);
bool QQmlContext_override_virtual_connectNotify(void* self, intptr_t slot);
void QQmlContext_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QQmlContext_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QQmlContext_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QQmlContext_staticMetaObject();
void QQmlContext_delete(QQmlContext* self);
QQmlContext__PropertyPair* QQmlContext__PropertyPair_new(QQmlContext__PropertyPair* param1);
void QQmlContext__PropertyPair_operatorAssign(QQmlContext__PropertyPair* self, QQmlContext__PropertyPair* param1);
void QQmlContext__PropertyPair_delete(QQmlContext__PropertyPair* self);